--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GOOD Weather</title>
 </head>
 <body>
